# RubikCubeSolver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/shaders/: basic.frag  basic.vert  cube.frag  cube.vert  screen.frag  screen.vert
src/: Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Colours.hpp  CubeManager.cpp  CubeManager.hpp  Enums.hpp  Face.cpp  Face.hpp  InnerCube.cpp  InnerCube.hpp  Main.cpp  MousePicker.cpp  MousePicker.hpp  MoveGenerator.cpp  MoveGenerator.hpp  MoveManager.cpp  MoveManager.hpp  QB.cpp  QB.hpp  Solver.cpp  Solver.hpp  Util.hpp
src/imgui/: SettingsWindow.cpp  SettingsWindow.hpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
